<resources>
    <string name="app_name">Пропуски</string>
    <string name="login_page_login">Логин</string>
    <string name="login_page_password">Пароль</string>
    <string name="login_page_signin">Войти</string>
    <string name="pass_reason">Причина пропуска</string>
    <string name="pass_start_date">Выбрать дату начала</string>
    <string name="pass_end_date">Выбрать дату конца</string>
    <string name="date_not_selected">Даты: не выбраны</string>
    <string name="attach_docs">Прикрепить документ</string>
    <string name="file_not_selected">Файл не выбран</string>
    <string name="send_request">Отправить заявку</string>
    <string name="item_pass_reason">Причина пропуска</string>
    <string name="pass_Status">Статус</string>
    <string name="item_dates">Дата начала - дата окончания</string>
    <string name="details_reason">Причина:</string>
    <string name="details_start_date">Дата начала:</string>
    <string name="details_end_date">Дата окончания:</string>
    <string name="details_status">Статус:</string>
    <string name="details_add_file">Прикрепить файл</string>
    <string name="details_send">Отправить</string>
    <string name="details">Причина:</string>
    <string name="details_document">Прикрепленный документ:</string>
    <string name="details_download_document">Открыть документ</string>
    <string name="en_sign_up">Sign up</string>
    <string name="en_sign_in">Sign in</string>
    <string name="ru_id">ИД</string>
    <string name="ru_user_id">ИД пользователя</string>
    <string name="ru_description">Описание</string>
    <string name="ru_from_date">Дата начала</string>
    <string name="ru_to_date">Дата конца</string>
    <string name="ru_status">Статус</string>
    <string name="ru_extensions">Продления</string>
    <string name="ru_back">Назад</string>
    <string name="ru_login">Логин</string>
    <string name="ru_password">Пароль</string>
    <string name="to_login">Войти</string>
    <string name="ru_pass_list">Список пропусков</string>
    <string name="ru_to_create_pass">Создать заявку</string>
    <string name="ru_register">Зарегистрироваться</string>
    <string name="ru_logout">Выйти</string>
    <string name="ru_surname">Фамилия</string>
    <string name="ru_name">Имя</string>
    <string name="ru_patronymic">Отчество</string>
    <string name="email">email</string>
    <string name="ru_password_reg">Пароль</string>
    <string name="ru_confirm_password">Подтверждение пароля</string>
    <string name="ru_cancel">Отмена</string>
    <string name="ru_ok">Oк</string>
    <string name="yyyy_mm_dd">Дата начала (YYYY-MM-DD)</string>
    <string name="yyyy_mm_dd_end">Дата окончания (YYYY-MM-DD)</string>
    <string name="ru_description_dial">Описание</string>
    <string name="ru_pick_image">Выбрать изображение</string>
    <string name="ru_pick_image_dial">Выбрать изображение</string>
    <string name="ru_desc">Описание</string>
    <string name="yyyy_mm_dd_to">Продление до (YYYY-MM-DD)</string>
</resources>