<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_reason"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass_start_date" />

        <Button
            android:id="@+id/btnEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass_end_date" />

        <TextView
            android:id="@+id/tvSelectedDates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_not_selected"
            android:padding="8dp" />

        <Button
            android:id="@+id/btnAttachFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attach_docs" />

        <TextView
            android:id="@+id/tvFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_not_selected"
            android:padding="8dp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_request" />
    </LinearLayout>
</ScrollView>
