<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_login"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_to_pass_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ru_pass_list"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_to_create_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ru_to_create_pass" />


    <Button
        android:id="@+id/btn_main_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ru_register" />

    <Button
        android:id="@+id/btn_main_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ru_logout" />

</LinearLayout>