<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/et_register_surname"
        android:hint="@string/ru_surname"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="138dp">
    </EditText>

    <EditText
        android:id="@+id/et_register_name"
        android:hint="@string/ru_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="138dp">
    </EditText>

    <EditText
        android:id="@+id/et_register_patronymic"
        android:hint="@string/ru_patronymic"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="138dp">
    </EditText>

    <EditText
        android:id="@+id/et_register_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="138dp">
    </EditText>

    <EditText
        android:id="@+id/et_register_password"
        android:hint="@string/ru_password_reg"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="138dp">
    </EditText>

    <EditText
        android:id="@+id/et_register_confirm_password"
        android:hint="@string/ru_confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="138dp">
    </EditText>


    <TextView
        android:id="@+id/tv_register_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        android:paddingTop="10dp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_register_cancel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/ru_cancel" />

        <Button
            android:id="@+id/btn_register_ok"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/ru_ok" />
    </LinearLayout>



</LinearLayout>
