<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etFromDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/yyyy_mm_dd"
        android:inputType="text" />

    <EditText
        android:id="@+id/etToDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/yyyy_mm_dd_end"
        android:inputType="text" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ru_description_dial"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ru_pick_image" />

    <ImageView
        android:id="@+id/ivImagePreview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:visibility="gone" />
</LinearLayout>
