<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvReasonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvReason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvStartDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_start_date"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvEndDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_end_date"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_status"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvFileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_document"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnDownloadFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_download_document"
        android:visibility="gone"/>
</LinearLayout>

