<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_create_extension_date_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/yyyy_mm_dd_to"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_create_extension_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ru_desc"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_create_extension_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ru_pick_image_dial" />

</LinearLayout>
